# sandbox

./: .clang-format  .gitignore  README.md
autotools/: .gitignore
autotools/amhello/src/: Makefile.am
cmake/compile_options/: CMakeLists.txt  README.md  a.cpp  b.cpp  main.cpp
cpp/image_processing/median_blur/: CMakeLists.txt  download_dependencies.sh  median_blur_tests.cpp
cpp/image_processing/median_blur/modern/: modern_implementation.h
linux/modules/hw/: Makefile  demo.sh  hw_lkm.c
linux/modules/random/: Makefile  demo.sh  myrandom.c
opencv/median_blur/: CMakeLists.txt  median_blur_main.cpp
python/flask/openclassrooms/: config.py
python/flask/openclassrooms/fbapp/: __init__.py  models.py  views.py
rust/projects/cities/: .gitignore  Cargo.toml
rust/projects/cities/src/: lib.rs  main.rs
rust/tutorial/closures/: Cargo.toml
rust/tutorial/closures/src/: lib.rs
rust/tutorial/collections/: Cargo.toml
rust/tutorial/collections/src/: main.rs
rust/tutorial/fibonacci/: Cargo.toml
rust/tutorial/fibonacci/src/: main.rs
rust/tutorial/functions/: Cargo.toml
rust/tutorial/guessing_game/: Cargo.toml
rust/tutorial/hello_cargo/: Cargo.toml
rust/tutorial/http_server/: Cargo.toml
rust/tutorial/minigrep/: Cargo.toml
rust/tutorial/minigrep/src/: lib.rs  (+1 more)
rust/tutorial/ownership/: Cargo.toml
rust/tutorial/refcell/: Cargo.toml
rust/tutorial/structs/: Cargo.toml
rust/tutorial/threads/: Cargo.toml
rust/tutorial/trait_objects/: Cargo.toml
rust/tutorial/variables/: Cargo.toml
tensorflow/official_tutorial/: Dockerfile  basic_classification.py
(+15 files in other folders)
